src/objects/Survey_Question__c.object
<CustomObject>
    <fields>
        <fullName>QuestionType__c</fullName>
        <label>QuestionType</label>
        <picklist>
            <picklistValues>
                <fullName>Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>Survey_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TypeChoices__c</fullName>
        <description>A comma separated list of options for the question picklist</description>
        <label>TypeChoices</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Survey Question</label>
    <nameField>
        <displayFormat>SQ-{0000}</displayFormat>
        <label>Survey Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>